Major update introducing Natural Language UI, Monitoring capabilities, and Core stability fixes.
🚀 New Features & UX:

Voice Control & NLU: Implemented determineIntent router. The bot now understands voice messages and text without commands (e.g., "Show users" or "Turn off charts").

Smart Alerting: Scheduled queries can now have logical conditions (e.g., "list is not empty"). The bot executes the query but sends a notification ONLY if the AI determines the condition is met.

Settings Menu: Added /settings with interactive toggles for Visualization, AI Insights, Data Modification (Safety), Show SQL, and Dry Run mode.

Excel Export: Added --excel flag and button support using Apache POI for generating formatted .xlsx reports.

Implicit Queries: Text input without / is automatically treated as a conversational query or refinement.

🧠 AI & Logic Enhancements:

Schema Conversion Strategy: Replaced JSON schema with DDL-like text format. This fixes hallucinations regarding Enums (ORDINAL/STRING mapping) and explicit Foreign Keys.

Aggressive SQL Extraction: Improved regex to strip conversational text (e.g., "Here is the code...") from AI responses, preventing syntax errors during Self-Healing retries.

Gemini Retry Policy: Added exponential backoff retries for handling 503/429 API errors.

Comparison Logic: Updated prompt to handle "Compare X vs Y" requests using UNION ALL, enabling automatic Comparison Charts (Bar Chart with distinct colors).

🐛 Bug Fixes & Stability:

FK Violation Fix: Fixed DataIntegrityViolationException when re-analyzing a repo. Existing schedules are now re-linked to the new history record before deletion.

Telegram 400 Errors: Replaced MarkdownV2 with Plain Text for system errors and logs to prevent crashes due to unescaped characters.

Enum Parsing: Updated JpaAnnotationVisitor to detect Enums even without @Enumerated annotation.

UI Fixes: Fixed disappearing buttons in the Settings menu during state refresh.

Chart Fixes: Fixed Y-axis scaling iss